2004-06-12  Stephen F. Booth  <sbooth@gnu.org>

	* support/Makefile.am: Removed mkinstalldirs from EXTRA_DIST
	* configure.ac: Removed extra AC_CANONICAL_HOST
	* configure.ac: Removed CGICC_CHECK_LINK_STDCPP

2004-06-11  Stephen F. Booth  <sbooth@gnu.org>

	* BUGS: Created file
	* Makefile.am: Distribute BUGS
	* acinclude.m4: Quote properly
	* doc/bugs.tmpl: Created file
	* doc/lists.tmpl: Created file
	* doc/license.tmpl: Created file
	* doc/demos.tmpl: Created file
	* docs/cgicc-doc.css: Fixed margins for hr.half

2004-06-09  Stephen F. Booth  <sbooth@gnu.org>

	* contrib/FCgiIO.cpp: Removed (amazingly obsolete) refs to CGICCNS

2003-07-13  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/CgiUtils.{h,cpp}: Changed escapeString to form_urldecode
	* cgicc/CgiUtils,{h,cpp}: Added charToHex and form_urlencode

2003-07-11  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/CgiUtils.h: Change STDNS to std::
	* cgicc/FormEntry.cpp: Add std:: in front of atol and atof
	* cgicc/CgiEnvironment.cpp: Add std:: in front of atol
	* cgicc/CgiEnvironment.cpp: Use vector<char> instead of auto_ptr
	* THANKS: Added Aida Shinra
	* NEWS: Added blurb about namespace support

2002-12-04  Stephen F. Booth  <sbooth@gnu.org>

	* acinclude.m4: Generate error if namespaces not supported
	* configure.ac: Removed enabling/disabling of namespaces
	* cgicc/CgiDefs.h.in: Removed CGICC_USE_NAMESPACES
	* cgicc/*.{h,cpp}: CGICC_BEGIN_NAMESPACE, CGICC_END_NAMESPACE, 
	STDNS macros removed
	* demo/*.cpp: CGICC_BEGIN_NAMESPACE, CGICC_END_NAMESPACE, 
	STDNS macros removed
	* contrib/*.{h,cpp}: CGICC_BEGIN_NAMESPACE, CGICC_END_NAMESPACE, 
	STDNS macros removed
	* doc/Doxyfile.in: Reference to obsolete macros removed

2002-11-24  Stephen F. Booth  <sbooth@gnu.org>

	* configure.ac: Change $debug to $cgicc_debug
	* contrib/nph-hello.cpp: Added STDNS qualifier to ofstream and ios

2002-11-23  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/FormEntry.{h,cpp}: Added getIntegerValue(int, int, bool&)